Update readme and package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ffmpeg",
+	"name": "ffmpeg-bunyan",
 	"description": "Utility for managing video streams using ffmpeg",
 	"version": "0.0.4",
 	"author": {
