Change name and email in package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"description": "Utility for managing video streams using ffmpeg",
 	"version": "0.0.4",
 	"author": {
-		"name": "Damiano Ciarla",
-		"email": "damiano.ciarl@gmail.com"
+		"name": "Mohammad Ranjbar Z",
+		"email": "mranjbar.z2993@gmail.com"
 	},
 	"repository": {
 		"type": "git",
